Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -227,6 +227,11 @@
 \printbibliography[type=misc,title={Preprints}]
 \printbibliography[type=article,title={Journal Publications}]
 
+\section{Software Contributions}
+\cvlistitem{POPBAMTools}
+
+\cvlistitem{AFLPTools: Tools for the curation and analysis of AFLP data \emph{github.com/geneva/AFLPTools}}
+
 \section{Research Grants \& Fellowships}
 
 \tlcventry{2011}{2014}{Ernst Caspari Fellowship}{}{}{}{\$6,000}	
