Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -228,9 +228,13 @@
 \printbibliography[type=article,title={Journal Publications}]
 
 \section{Software Contributions}
-\cvlistitem{POPBAMTools}
+\cvlistitem{\textsc{POPBAMTools}: An R package for reading and annotating output from POPBAM \emph{github.com/geneva/POPBAMTools}}
 
-\cvlistitem{AFLPTools: Tools for the curation and analysis of AFLP data \emph{github.com/geneva/AFLPTools}}
+\cvlistitem{\textsc{AFLPTools}: Tools for the curation and analysis of AFLP data \emph{github.com/geneva/AFLPTools}}
+
+\cvlistitem{R We There Yet?: An R package for the analysis of Markov chain Monte Carlo (MCMC) convergence in Bayesian phylogenetic inference (contributer) \emph{github.com/danlwarren/RWTY}}
+
+\cvlistitem{\textsc{ngscmd}: A C program to manipulate next-generation sequence data files (contributor) \emph{github.com/dgarrigan/ngscmd}}
 
 \section{Research Grants \& Fellowships}
 
