Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -93,7 +93,7 @@
 %\phone[fixed]{+2~(345)~678~901}                    % optional, remove / comment the line if not wanted
 %\phone[fax]{+3~(456)~789~012}                      % optional, remove / comment the line if not wanted
 \email{anthony.geneva@rochester.edu}                               % optional, remove / comment the line if not wanted
-\homepage{crescatscientia.com}                         % optional, remove / comment the line if not wanted
+\homepage{CrescatScientia.com}                         % optional, remove / comment the line if not wanted
 \extrainfo{github.com/geneva}    
 %\extrainfo{additional information}                 % optional, remove / comment the line if not wanted
 %\photo[64pt][0.4pt]{images/picture}                       % optional, remove / comment the line if not wanted; '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file stored
@@ -227,14 +227,6 @@
 \printbibliography[type=misc,title={Preprints}]
 \printbibliography[type=article,title={Journal Publications}]
 
-\section{Software Contributions}
-\cvlistitem{\textsc{POPBAMTools}: An R package for reading and annotating output from POPBAM \emph{github.com/geneva/POPBAMTools}}
-
-\cvlistitem{\textsc{AFLPTools}: Tools for the curation and analysis of AFLP data \emph{github.com/geneva/AFLPTools}}
-
-\cvlistitem{R We There Yet?: An R package for the analysis of Markov chain Monte Carlo (MCMC) convergence in Bayesian phylogenetic inference (contributer) \emph{github.com/danlwarren/RWTY}}
-
-\cvlistitem{\textsc{ngscmd}: A C program to manipulate next-generation sequence data files (contributor) \emph{github.com/dgarrigan/ngscmd}}
 
 \section{Research Grants \& Fellowships}
 
@@ -263,6 +255,14 @@
 \tldatecventry{2004}{Villanova Graduate Research Fellowship}{}{}{}{}
 \tldatecventry{2003}{Villanova Summer Research Fellowship}{}{}{}{}	
 
+\section{Software Contributions}
+\cvlistitem{\textsc{POPBAMTools}: An R package for reading and annotating output from POPBAM \emph{github.com/geneva/POPBAMTools}}
+
+\cvlistitem{\textsc{AFLPTools}: Tools for the curation and analysis of AFLP data \emph{github.com/geneva/AFLPTools}}
+
+\cvlistitem{R We There Yet?: An R package for the analysis of Markov chain Monte Carlo convergence in Bayesian phylogenetic inference (contributor) \emph{github.com/danlwarren/RWTY}}
+
+\cvlistitem{\textsc{ngscmd}: A C program to manipulate next-generation sequence data files \mbox{(contributor)} \emph{github.com/dgarriga/ngscmd}}
 
 
 \printbibliography[type=thesis,title={Thesis}]
