Added new publications

--- a/cvreferences.bib
+++ b/cvreferences.bib
@@ -2,7 +2,7 @@
 %% http://papersapp.com/papers/
 
 @article{ArceH:2013,
-author = {Arce H, M and Reis, RE and \textbf{AJ Geneva} and Sabaj Pérez, MH},
+author = {Arce H, M and Reis, RE and \genevabold{AJ Geneva} and Sabaj Pérez, MH},
 title = {{Molecular phylogeny of thorny catfishes (Siluriformes: Doradidae)}},
 journal = {Molelcular Phylogenetics and Evolution},
 year = {2013},
@@ -13,7 +13,7 @@ month = jun
 }
 
 @article{vanmeter:2014,
-author = {Van Meter, M and Kashyap, M and Rezazadeh, S and \textbf{AJ Geneva} and Morello, TD and Seluanov, A and Gorbunova, V},
+author = {Van Meter, M and Kashyap, M and Rezazadeh, S and \genevabold{AJ Geneva} and Morello, TD and Seluanov, A and Gorbunova, V},
 title = {{SIRT6 represses LINE1 retrotransposons by ribosylating KAP1 but this repression fails with stress and age}},
 journal = {Nature communications},
 year = {2014},
@@ -23,9 +23,8 @@ month = sep
 }
 
 
-
 @article{Ascher:2013,
-author = {Ascher, JM and \textbf{AJ Geneva} and Ng, J and Wyatt, JD and Glor, RE},
+author = {Ascher, JM and \genevabold{AJ Geneva} and Ng, J and Wyatt, JD and Glor, RE},
 title = {{Phylogenetic analyses of novel squamate \emph{Adenovirus} sequences in wild-caught \emph{Anolis} lizards}},
 journal = {PLoS ONE},
 year = {2013},
@@ -36,7 +35,7 @@ month = apr
 }
 
 @article{Gamble:2013,
-author = {Gamble, T (co-first author) and \textbf{AJ Geneva} (co-first author) and Glor, RE and Zarkower, D},
+author = {Gamble, T (co-first author) and \genevabold{AJ Geneva} (co-first author) and Glor, RE and Zarkower, D},
 title = {{\emph{Anolis} sex chromosomes are derived from a single ancestral pair}},
 journal = {Evolution},
 year = {2014},
@@ -46,7 +45,7 @@ pages = {1027--1041}
 }
 
 @article{Garrigan:2014,
-author = {Garrigan, D and Kingan, SB and \textbf{AJ Geneva} and Vedanayagam, JP and Presgraves, DC},
+author = {Garrigan, D and Kingan, SB and \genevabold{AJ Geneva} and Vedanayagam, JP and Presgraves, DC},
 title = {{Genome diversity and divergence in \emph{Drosophila mauritiana}: Multiple signatures of faster X evolution}},
 journal = {Genome Biology and Evolution},
 year = {2014},
@@ -57,7 +56,7 @@ month = sep
 }
 
 @article{Garrigan:2012,
-author = {Garrigan, D and Kingan, SB and \textbf{AJ Geneva} and Andolfatto, P and Clark, AG and Thornton, KR and Presgraves, DC},
+author = {Garrigan, D and Kingan, SB and \genevabold{AJ Geneva} and Andolfatto, P and Clark, AG and Thornton, KR and Presgraves, DC},
 title = {{Genome sequencing reveals complex speciation in the \emph{Drosophila simulans} clade}},
 journal = {Genome Research},
 year = {2012},
@@ -68,7 +67,7 @@ month = aug
 }
 
 @article{Geneva:2010,
-author = {\textbf{Geneva, A} and Garrigan, D},
+author = {\genevabold{Geneva, A} and Garrigan, D},
 title = {{Population genomics of secondary contact}},
 journal = {Genes},
 year = {2010},
@@ -77,8 +76,31 @@ pages = {124--142},
 month = jun
 }
 
+@article{Geneva:2015,
+author = {\genevabold{Geneva, AJ} and Muirhead, CA and Kingan, SB and Garrigan, D},
+title = {{A new method to scan genomes for introgression in a secondary contact model}},
+journal = {PLoS one},
+volume = {in press},
+pages = {},
+year = {2015},
+}
+
+@article{Graf:2015,
+title = {{Molecular phylogenetic analysis supports a Gondwanan origin of the Hyriidae (Mollusca: Bivalvia: Unionida) and the paraphyly of Australasian taxa}},
+journal = {{Molecular Phylogenetics and Evolution}},
+volume = {in press},
+number = {},
+pages = {},
+year = {2015},
+issn = {1055-7903},
+doi = {http://dx.doi.org/10.1016/j.ympev.2015.01.012},
+url = {http://www.sciencedirect.com/science/article/pii/S1055790315000263},
+author = {Graf, DL and Jones, H and \genevabold{Geneva, AJ} and Pfeiffer III, JM and Klunzinger, MW},
+}
+
+
 @misc{Geneva:2014,
-author = {\textbf{Geneva, AJ} and Kingan, SB and Garrigan, D},
+author = {\genevabold{Geneva, AJ} and Kingan, SB and Garrigan, D},
 title = {{An improved sequence measure used to scan genomes for regions of recent gene flow}},
 journal = {arXiv},
 pages = {1403.1552},
@@ -87,7 +109,7 @@ month = mar
 }
 
 @article{Geneva:2013,
-author = {\textbf{Geneva, AJ} and Bauer, AM and Sadlier, RA and Jackman, TR},
+author = {\genevabold{Geneva, AJ} and Bauer, AM and Sadlier, RA and Jackman, TR},
 title = {{Terrestrial Herpetofauna of {\^I}le des Pins, New Caledonia, with an Emphasis on its Surrounding Islands}},
 journal = {Pacific Science},
 year = {2013},
@@ -98,7 +120,7 @@ month = oct
 }
 
 @article{Geneva:2010b,
-author = {\textbf{Geneva, AJ} and Roberts, RE},
+author = {\genevabold{Geneva, AJ} and Roberts, RE},
 title = {{\emph{Gopherus polyphemus} (Gopher Tortoise). GROWTH }},
 journal = {Herpetological Review},
 year = {2010},
@@ -109,7 +131,7 @@ month = aug
 }
 
 @article{Geneva:2010a,
-author = {\textbf{Geneva, AJ} and Ng, J and Scantlebury, D and Ossip-Klein, A and Rudman, S and Kelly, A and Reinhardt, C and Glor, RE},
+author = {\genevabold{Geneva, AJ} and Ng, J and Scantlebury, D and Ossip-Klein, A and Rudman, S and Kelly, A and Reinhardt, C and Glor, RE},
 title = {{Natural History of West Indian Amphibians and Reptiles}},
 journal = {Herpetological Review},
 year = {2010},
@@ -120,7 +142,7 @@ month = jul
 }
 
 @article{Geneva:2009,
-author = {\textbf{Geneva, AJ} and Roberts, RE},
+author = {\genevabold{Geneva, AJ} and Roberts, RE},
 title = {{The terrestrial herpetofauna of the Atlantic Ridge Preserve State Park}},
 journal = {Florida Scientist},
 year = {2009},
@@ -131,7 +153,7 @@ month = mar
 }
 
 @thesis{Geneva:2007,
-author = {\textbf{Geneva, AJ}},
+author = {\genevabold{Geneva, AJ}},
 title = {{A phylogeographic analysis of \emph{Bavayia} cf. \emph{crassicollis}}},
 school = {MS Thesis},
 year = {2007},
@@ -139,7 +161,7 @@ month = dec
 }
 
 @article{Graf:2014,
-author = {Graf, DL and \textbf{AJ Geneva} and Pfeiffer, JM and Chilala, AD},
+author = {Graf, DL and \genevabold{AJ Geneva} and Pfeiffer, JM and Chilala, AD},
 title = {{Phylogenetic analysis of \emph{Prisodontopsis} Tomlin, 1928 and \emph{Mweruella} Haas, 1936 (Bivalvia: Unionidae) from Lake Mweru (Congo basin) supports a Quaternary radiation in the Zambian Congo}},
 journal = {Journal of Molluscan Studies},
 year = {2014},
@@ -150,7 +172,7 @@ month = jul
 }
 
 @article{Lambert:2013,
-author = {Lambert, SM and \textbf{AJ Geneva} and Mahler, DL and Glor, RE},
+author = {Lambert, SM and \genevabold{AJ Geneva} and Mahler, DL and Glor, RE},
 title = {{Using genomic data to revisit an early example of reproductive character displacement in Haitian \emph{Anolis} lizards}},
 journal = {MoleculaREcology},
 year = {2013},
@@ -161,7 +183,7 @@ month = mar
 }
 
 @article{Scantlebury:2011,
-author = {Scantlebury, DP and Ng, J and Landestoy, M and \textbf{AJ Geneva} and Glor, RE},
+author = {Scantlebury, DP and Ng, J and Landestoy, M and \genevabold{AJ Geneva} and Glor, RE},
 title = {{Notes on activity patterns of five species of \emph{Sphaerodactylus} (Squamata: Sphaerodactylidae)
 from the Dominican Republic}},
 journal = {IRCF Reptiles {\&} Amphibians},
@@ -173,7 +195,7 @@ month = feb
 }
 
 @article{Schaefer:2011,
-author = {Schaefer, SA and Chakrabarty, P and \textbf{AJ Geneva} and Perez, MH Sabaj},
+author = {Schaefer, SA and Chakrabarty, P and \genevabold{AJ Geneva} and Perez, MH Sabaj},
 title = {{Nucleotide sequence data confirm diagnosis and local endemism of variable morphospecies of Andean astroblepid catfishes (Siluriformes: Astroblepidae)}},
 journal = {Zoological Journal of the Linnean Society},
 year = {2011},
@@ -183,7 +205,7 @@ pages = {90--102}
 }
 
 @article{Stuart:2012,
-author = {Stuart, YE and Landestoy, MA and Mahler, DL and Scantlebury, D and \textbf{AJ Geneva} and VanMiddlesworth, PS and Glor, RE},
+author = {Stuart, YE and Landestoy, MA and Mahler, DL and Scantlebury, D and \genevabold{AJ Geneva} and VanMiddlesworth, PS and Glor, RE},
 title = {{Two new introduced populations of the Cuban green anole (\emph{Anolis porcatus}) 
 in the Dominican Republic}},
 journal = {IRCF Reptiles {\&} Amphibians},
@@ -195,7 +217,7 @@ month = mar
 }
 
 @article{Whelan:2011,
-author = {Whelan, NV and \textbf{AJ Geneva} and Graf, DL},
+author = {Whelan, NV and \genevabold{AJ Geneva} and Graf, DL},
 title = {{Molecular phylogenetic analysis of tropical freshwater mussels (Mollusca: Bivalvia: Unionoida) resolves the position of Coelatura and supports a monophyletic Unionidae}},
 journal = {Molelcular Phylogenetics and Evolution},
 year = {2011},
@@ -207,7 +229,7 @@ month = may
 % talks and posters
 
 @inproceedings{Geneva:2014p,
-author = {\textbf{Geneva, AJ} and Kingan, SB and Machado, C and Garrigan, D},
+author = {\genevabold{Geneva, AJ} and Kingan, SB and Machado, C and Garrigan, D},
 year = {2014},
 title = {A method to scan genomes for introgression in a secondary contact model},
 maintitle = {Society for Molecular Biology and Evolution},
@@ -215,7 +237,7 @@ address = {San Juan, PR},
 }
 
 @inproceedings{Garrigan:2014p,
-author = {Garrigan, D and Kingan, SB and \textbf{AJ Geneva} and Vendanygram, JP  and Presgraves, DC},
+author = {Garrigan, D and Kingan, SB and \genevabold{AJ Geneva} and Vendanygram, JP  and Presgraves, DC},
 year = {2014},
 title = {Rapidly evolving features of the \emph{Drosophila mauritiana} genome},
 maintitle = {Society for Molecular Biology and Evolution},
@@ -223,7 +245,7 @@ address = {San Juan, PR},
 }
 
 @inproceedings{Gilman:2014,
-author = {Gilman, C and \textbf{AJ Geneva} and Glor, RE and Albertson, RC  and Irschick, DJ},
+author = {Gilman, C and \genevabold{AJ Geneva} and Glor, RE and Albertson, RC  and Irschick, DJ},
 year = {2014},
 title = {Preliminary analysis of hemiclitoris development in the lizard \emph{Anolis distichus}},
 maintitle = {Society for Integrative and Comparative Biology},
@@ -231,7 +253,7 @@ address = {Austin, TX},
 }
 
 @inproceedings{Keating:2013,
-author = {Keating, S and Desch, B and \textbf{AJ Geneva} and Scantlebury, D S  and Glor, RE},
+author = {Keating, S and Desch, B and \genevabold{AJ Geneva} and Scantlebury, D S  and Glor, RE},
 year = {2013},
 title = {Phylogeography and Population Structure of \emph{Anolis} lizards in Hispaniola},
 maintitle = {Undergraduate Biology Poster Session},
@@ -239,7 +261,7 @@ address = {University of Rochester, NY},
 }
 
 @inproceedings{Geneva:2013t,
-author = {\textbf{Geneva, AJ} and Glor, RE},
+author = {\genevabold{Geneva, AJ} and Glor, RE},
 year = {2013},
 title = {Reproductive isolation in \emph{Anolis} lizards},
 maintitle = {Joint Meeting of Ichthyologists and Herpetologists},
@@ -247,7 +269,7 @@ address = {Albuquerque, NM},
 }
 
 @inproceedings{Desch:2013,
-author = {Desch, B and \textbf{AJ Geneva} and Glor, RE},
+author = {Desch, B and \genevabold{AJ Geneva} and Glor, RE},
 year = {2013},
 title = {Testing predictions of sensory drive using population structure analyses},
 maintitle = {de Kiewiet Summer Research Fellowships Poster Session},
@@ -255,7 +277,7 @@ address = {Rochester, NY},
 }
 
 @inproceedings{Geneva:2007t,
-author = {\textbf{Geneva, AJ}},
+author = {\genevabold{Geneva, AJ}},
 year = {2007},
 title = {Molecular discord in the New Caledonian insular gecko species \emph{Bavayia cf crassicollis}},
 maintitle = {The Academy of Natural Sciences},
@@ -263,7 +285,7 @@ address = {Philadelphia, PA},
 }
 
 @inproceedings{Graf:2010,
-author = {Graf DL and \textbf{AJ Geneva}},
+author = {Graf DL and \genevabold{AJ Geneva}},
 year = {2010},
 title = {Coelatura and the Monophyly of the Unionidae (Bivalvia: Unionoida)},
 maintitle = {American Malacological Society Meeting},
@@ -271,7 +293,7 @@ address = {San Diego, CA},
 }
 
 @inproceedings{Horowitz:2009t,
-author = {Horwitz, R and \textbf{AJ Geneva} and Tsang, S and Moser, SM and Keller, D and Overbeck, P},
+author = {Horwitz, R and \genevabold{AJ Geneva} and Tsang, S and Moser, SM and Keller, D and Overbeck, P},
 year = {2009},
 title = {Regional and local population structure of \emph{Notropis bifrenatus} (Cyprinidae) from extirpated and extant populations, using museum and recent specimens},
 maintitle = {American Fisheries Society Annual Meeting},
@@ -279,7 +301,7 @@ address = {Nashville, TN},
 }
 
 @inproceedings{Rosenberg:2009,
-author = {Rosenberg, G and Blake, N  and \textbf{AJ Geneva}},
+author = {Rosenberg, G and Blake, N  and \genevabold{AJ Geneva}},
 year = {2009},
 title = {Phylogenetic analysis of Jamaican Pleurodontidae},
 maintitle = {American Malacological Society Meeting},
@@ -287,7 +309,7 @@ address = {Ithaca, NY},
 }
 
 @inproceedings{Schaefer:2009,
-author = {Schaefer,  SA and Sabaj, M and \textbf{AJ Geneva} and Chakrabarty, P},
+author = {Schaefer,  SA and Sabaj, M and \genevabold{AJ Geneva} and Chakrabarty, P},
 year = {2009},
 title = {Andean Astroblepid Catfishes: Pattern and Scale of Species Diversity},
 maintitle = {Joint Meeting of Ichthyologists and Herpetologists},
@@ -295,7 +317,7 @@ address = {Portland, OR},
 }
 
 @inproceedings{Tsang:2008,
-author = {Tsang, S and Horowitz, R and \textbf{AJ Geneva}},
+author = {Tsang, S and Horowitz, R and \genevabold{AJ Geneva}},
 year = {2008},
 title = {Population structure and genetics of the bridle shiner (\emph{Notropis bifrenatus}) in drainages of the American Northeast},
 maintitle = {Sigma Xi Annual Meeting},
@@ -303,7 +325,7 @@ address = {Washington, DC},
 }
 
 @inproceedings{Geneva:2008p,
-author = {\textbf{Geneva, AJ}},
+author = {\genevabold{Geneva, AJ}},
 year = {2008},
 title = {Amplified Fragment Length Polymorphisms Reveal Population Structuring and Long Distance Dispersal in New Caledonian Insular Gecko Species (Reptilia: Diplodactylidae)},
 maintitle = {Joint Meeting of Ichthyologists and Herpetologists},
@@ -311,7 +333,7 @@ address = {Montreal, QC},
 }
 
 @inproceedings{Geneva:2007NZ,
-author = {\textbf{Geneva, AJ} and Bauer, AM and Jackman, TR},
+author = {\genevabold{Geneva, AJ} and Bauer, AM and Jackman, TR},
 year = {2007},
 title = {Molecular phylogenetic discord between mitochondrial DNA and Amplified Fragment Length Polymorphisms in New Caledonian insular gecko species (Reptilia:Diplodactylidae)},
 maintitle = {Society for the Study of Evolution Annual Meeting},
@@ -319,7 +341,7 @@ address = {Christchurch, New Zealand},
 }
 
 @inproceedings{Geneva:2004,
-author = {\textbf{Geneva, AJ}},
+author = {\genevabold{Geneva, AJ}},
 year = {2004},
 title = {The Phylogeography of a Diplodactylid Gecko in a Tropical Island System},
 maintitle = {Joint Meeting of Ichthyologists and Herpetologists},
@@ -328,7 +350,7 @@ address = {Norman, OK},
 
 
 @inproceedings{Geneva:2008t,
-author = {\textbf{Geneva, AJ}},
+author = {\genevabold{Geneva, AJ}},
 year = {2008},
 title = {The use of molecular techniques in evolutionary biology and systematics},
 maintitle = {The Franklin Inn Club},
@@ -336,7 +358,7 @@ address = {Philadelphia, PA},
 }
 
 @inproceedings{Geneva:2012t,
-author = {\textbf{Geneva, AJ} and Glor, RE},
+author = {\genevabold{Geneva, AJ} and Glor, RE},
 year = {2012},
 title = {Reproductive Isolation in Hispaniolan Trunk Anoles},
 maintitle = {Society for the Study of Evolution Annual Meeting},
@@ -345,7 +367,7 @@ address = {Ottawa, ON},
 
 
 @inproceedings{Mahler:2012,
-author = {Mahler, DL and Lambert, SM and \textbf{AJ Geneva} and Hedges, SB and Losos, JB and Glor, RE},
+author = {Mahler, DL and Lambert, SM and \genevabold{AJ Geneva} and Hedges, SB and Losos, JB and Glor, RE},
 year = {2012},
 title = {Discovery of a short-limbed giant \emph{Anolis} from Hispaniola supports a deterministic model of island evolution and community assembly},
 maintitle = {World Congress of Herpetology},
@@ -353,7 +375,7 @@ address = {Vancouver, BC},
 }
 
 @inproceedings{Gamble:2012p,
-author = {Gamble, T and \textbf{AJ Geneva} and Glor, RE and Zarkower, D},
+author = {Gamble, T and \genevabold{AJ Geneva} and Glor, RE and Zarkower, D},
 year = {2012},
 title = {Repeated evolution of heteromorphic sex chromosomes in \emph{Anolis} (Pleurodonta; Squamata)},
 maintitle = {Sixth International Symposium on the Biology of Vertebrate Sex Determination},
@@ -361,7 +383,7 @@ address = {Hilo, HI},
 }
 
 @inproceedings{Geneva:2011p,
-author = {\textbf{Geneva, AJ} and Hilton, J and Ng, J and Glor, RE},
+author = {\genevabold{Geneva, AJ} and Hilton, J and Ng, J and Glor, RE},
 year = {2011},
 title = {A multi-locus Molecular Phylogeny of distichoid anoles},
 maintitle = {Joint Meeting of Ichthyologists and Herpetologists },
