--- a/cvreferences.bib
+++ b/cvreferences.bib
@@ -34,7 +34,7 @@ pages = {e60977},
 month = apr
 }
 
-@article{Gamble:2013,
+@article{Gamble:2014,
 author = {Gamble, T (co-first author) and \genevabold{AJ Geneva} (co-first author) and Glor, RE and Zarkower, D},
 title = {{\emph{Anolis} sex chromosomes are derived from a single ancestral pair}},
 journal = {Evolution},
@@ -80,8 +80,10 @@ month = jun
 author = {\genevabold{Geneva, AJ} and Muirhead, CA and Kingan, SB and Garrigan, D},
 title = {{A new method to scan genomes for introgression in a secondary contact model}},
 journal = {PLoS one},
-volume = {in press},
-pages = {},
+month = {04},
+volume = {10},
+url = {http://dx.doi.org/10.1371\%2Fjournal.pone.0118621},
+pages = {e0118621},
 year = {2015},
 }
 
@@ -89,19 +91,18 @@ year = {2015},
 author = {\genevabold{Geneva, AJ} and Hilton, J and Noll, S and Glor, RE},
 title = {{Multilocus phylogenetic analyses of Hispaniolan and Bahamian trunk anoles (\emph{distichus} species group)}},
 journal = {Molecular Phylogenetics and Evolution},
-volume = {accepted},
-pages = {},
+volume = {87},
+pages = {105-117},
 year = {2015},
 }
-
 
 
 @article{Graf:2015,
 title = {{Molecular phylogenetic analysis supports a Gondwanan origin of the Hyriidae (Mollusca: Bivalvia: Unionida) and the paraphyly of Australasian taxa}},
 journal = {{Molecular Phylogenetics and Evolution}},
-volume = {in press},
+volume = {85},
 number = {},
-pages = {},
+pages = {1-9},
 year = {2015},
 issn = {1055-7903},
 doi = {http://dx.doi.org/10.1016/j.ympev.2015.01.012},
@@ -109,15 +110,6 @@ url = {http://www.sciencedirect.com/science/article/pii/S1055790315000263},
 author = {Graf, DL and Jones, H and \genevabold{Geneva, AJ} and Pfeiffer III, JM and Klunzinger, MW},
 }
 
-
-@misc{Geneva:2014,
-author = {\genevabold{Geneva, AJ} and Kingan, SB and Garrigan, D},
-title = {{An improved sequence measure used to scan genomes for regions of recent gene flow}},
-journal = {arXiv},
-pages = {1403.1552},
-year = {2014},
-month = mar
-}
 
 @article{Geneva:2013,
 author = {\genevabold{Geneva, AJ} and Bauer, AM and Sadlier, RA and Jackman, TR},
@@ -171,6 +163,16 @@ year = {2007},
 month = dec
 }
 
+
+@thesis{Geneva:2015PhD,
+author = {\genevabold{Geneva, AJ}},
+title = {{Integrative Analyses of Speciation in \emph{Anolis} lizards}},
+school = {PhD Dissertation},
+year = {2015},
+month = dec
+}
+
+
 @article{Graf:2014,
 author = {Graf, DL and \genevabold{AJ Geneva} and Pfeiffer, JM and Chilala, AD},
 title = {{Phylogenetic analysis of \emph{Prisodontopsis} Tomlin, 1928 and \emph{Mweruella} Haas, 1936 (Bivalvia: Unionidae) from Lake Mweru (Congo basin) supports a Quaternary radiation in the Zambian Congo}},
@@ -185,7 +187,7 @@ month = jul
 @article{Lambert:2013,
 author = {Lambert, SM and \genevabold{AJ Geneva} and Mahler, DL and Glor, RE},
 title = {{Using genomic data to revisit an early example of reproductive character displacement in Haitian \emph{Anolis} lizards}},
-journal = {MoleculaREcology},
+journal = {Molecular Ecology},
 year = {2013},
 volume = {22},
 number = {15},
@@ -229,7 +231,7 @@ month = mar
 
 @article{Whelan:2011,
 author = {Whelan, NV and \genevabold{AJ Geneva} and Graf, DL},
-title = {{Molecular phylogenetic analysis of tropical freshwater mussels (Mollusca: Bivalvia: Unionoida) resolves the position of Coelatura and supports a monophyletic Unionidae}},
+title = {{Molecular phylogenetic analysis of tropical freshwater mussels (Mollusca: Bivalvia: Unionoida) resolves the position of \emph{Coelatura} and supports a monophyletic Unionidae}},
 journal = {Molelcular Phylogenetics and Evolution},
 year = {2011},
 volume = {61},
@@ -238,7 +240,6 @@ month = may
 }
 
 % talks and posters
-
 @inproceedings{Geneva:2014p,
 author = {\genevabold{Geneva, AJ} and Kingan, SB and Machado, C and Garrigan, D},
 year = {2014},
@@ -397,7 +398,14 @@ address = {Hilo, HI},
 author = {\genevabold{Geneva, AJ} and Hilton, J and Ng, J and Glor, RE},
 year = {2011},
 title = {A multi-locus Molecular Phylogeny of distichoid anoles},
-maintitle = {Joint Meeting of Ichthyologists and Herpetologists },
+maintitle = {Joint Meeting of Ichthyologists and Herpetologists},
 address = {Minneapolis, MN},
 }
 
+@inproceedings{Larracuente:2015,
+author = {Larracuente, AM and Khost, DE and \genevabold{AJ Geneva}},
+year = {2015},
+title = {Intragenomic conflict and satellite DNA evolution in \emph{Drosophila}},
+maintitle = {Genetics Society of America Annal \emph{Drosophila} Research Conference},
+address = {Chicago, IL},
+}
