--- a/main.tex
+++ b/main.tex
@@ -118,7 +118,7 @@
 % Format:  \tlcventry{StartYear}{EndYear}{Degree}{Institution}{City}{\textit{Grade}}{Description}  % Arguments 3 (Degree) to 6 (Grade) can be left empty. 
 % Example: \tlcventry{2012}{0}{BSc Computer Science}{University of MyCity}{MyCity}{}{Also completed several random courses}
 
-\tlcventry{2015}{0}{Post-Doctoral Fellow}{Harvard University}{}{}{supervisors: Daniel Garrigan \& Richard Glor}
+\tlcventry{2015}{0}{Post-Doctoral Fellow}{Harvard University}{}{}{supervisor: Jonathan Losos}
 
 \tldatecventry{2015}{PhD Candidate}{University of Rochester}{}{}{supervisors: Daniel Garrigan \& Richard Glor}
 
